      commands, avoiding binary-arch-rules-but-pkg-is-arch-indep false
      positives when an empty rule is followed by a definition.
      (Closes: #510869)

  * frontend/lintian:
    + [RA] Run maintainer well-formedness checks on the Changed-By field
      of the *.changes file.  (Closes: #183642)

  * lib/Lintian/Check.pm:
    + [RA] New module for checks run from multiple places.
  * lib/Lintian/Schedule.pm:
    + [RA] Fix Perl warnings triggered by missing fields in the control
      file of a binary package.
  * lib/Tags.pm:
    + [RA] Avoid Perl warnings if Severity or Certainty isn't set for a
      tag.  (Closes: #507278)
    + [RA] Record statistics for certainty correctly.

  * man/lintian.1:
    + [RA] Document new deb-format check script.

  * t/runtests:
    + [RA] Add support for running lintian on changes files in t/changes
      and checking the tag output.
    + [RA] Add support for building a Debian package using basic tools,
      with more complete control over the contents, and running lintian on
      the results.
    + [RA] Fix exit status when a test fails but -k was given.

 -- Russ Allbery <rra@debian.org>  Mon, 05 Jan 2009 10:41:18 -0800

lintian (2.1.4) unstable; urgency=low

  * Summary of tag changes:
    + Added
      - binary-control-field-duplicates-source
      - brace-expansion-in-debhelper-config-file
      - control-interpreter-in-usr-local (split from
         interpreter-in-usr-local)
      - control-interpreter-without-depends
      - copyright-refers-to-bad-php-license
      - copyright-refers-to-problematic-php-license
      - copyright-with-old-dh-make-debian-copyright
      - dh-clean-k-is-deprecated
      - desktop-mimetype-without-update-call
      - forbidden-postrm-interpreter
      - games-package-should-be-section-games
      - preinst-interpreter-without-predepends
      - script-calls-init-script-directly
      - unknown-control-interpreter (split from unusual-interpreter)
      - version-refers-to-distribution